Updated story template to use correct spelling for DB

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 </template>
 
 <template name="story">
-    <img src="{{url}}">
+    <img src="{{URL}}">
     <div class="meta">
-        <p class="location">location</p>
+        <p class="location">{{Location}}</p>
     </div>
 </template>
