--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <head>
     <meta charset="utf-8">
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        Logo + Header Here!!
-    </header>
-
+    <h1>#TESTING</h1>
     {{>stories}}
 </body>
 
@@ -17,8 +16,10 @@
 </template>
 
 <template name="story">
-    <img src="{{url}}">
-    <div class="meta">
-        <p class="location">location</p>
-    </div>
+    <article>
+        <img src="{{url}}">
+        <div class="meta">
+            <p class="location"><i class="fa fa-location-arrow"></i>{{location}}</p>
+        </div>
+    </article>
 </template>
