--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 </template>
 
 <template name="story">
-    <article>
-        <img src="{{url}}">
-        <div class="meta">
-            <p class="location"><i class="fa fa-location-arrow"></i>{{location}}</p>
-        </div>
-    </article>
+    <img src="{{URL}}">
+    <div class="meta">
+        <p class="location">{{Location}}</p>
+    </div>
 </template>
