--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 </template>
 
 <template name="story">
-    <img src="{{URL}}">
-    <div class="meta">
-        <p class="location">{{Location}}</p>
-    </div>
+    <article>
+        <img src="{{url}}">
+        <div class="meta">
+            <p class="location">{{location}}</p>
+        </div>
+    </article>
 </template>
