--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <div class="options">
             <div class="meta">
                 <p class="location">{{location}}</p>
-                <p class="time">10 minutes ago</p>
+                <p class="time">{{time}} ago</p>
             </div>
 
             <div class="buttons">
-                <a href="#"><i class="fa fa-heart"></i>&nbsp;10</a>
+                <a href="#"><i class="fa fa-heart"></i>&nbsp;{{likes}}</a>
                 <a href="#"><i class="fa fa-flag"></i></a>
             </div>
         </div>
