--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="options">
             <div class="meta">
                 <p class="location">{{location}}</p>
-                <p class="time">{{time}} ago</p>
+                <p class="time">{{time}} minutes ago</p>
             </div>
 
             <div class="buttons">
