Created header bar

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 
 <body>
+    <header>
+        wejfoi
+    </header>
     <h1><span class="faded">HOME</span>&nbsp;&nbsp;EUROPE</h1>
     {{>stories}}
 </body>
@@ -26,7 +29,7 @@
             </div>
 
             <div class="buttons">
-                <a href="#"><i class="fa fa-heart"></i>&nbsp;{{likes}}</a>
+                <a href="#"><i class="fa fa-heart"></i>&nbsp;&nbsp;{{likes}}</a>
                 <a href="#"><i class="fa fa-flag"></i></a>
             </div>
         </div>
