--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
     <meta charset="utf-8">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        wejfoi
+        <i class="icon ion-navicon"></i>
     </header>
     <h1><span class="faded">HOME</span>&nbsp;&nbsp;EUROPE</h1>
     {{>stories}}
@@ -29,8 +29,8 @@
             </div>
 
             <div class="buttons">
-                <a href="#"><i class="fa fa-heart"></i>&nbsp;&nbsp;{{likes}}</a>
-                <a href="#"><i class="fa fa-flag"></i></a>
+                <a href="#"><i class="icon ion-heart"></i>&nbsp;&nbsp;{{likes}}</a>
+                <a href="#"><i class="icon ion-flag"></i></a>
             </div>
         </div>
     </article>
