Added class to like and flag

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             </div>
 
             <div class="buttons">
-                <a href="#"><i class="icon ion-heart"></i>&nbsp;&nbsp;{{likes}}</a>
-                <a href="#"><i class="icon ion-flag"></i></a>
+                <a href="#" class="like"><i class="icon ion-heart"></i>&nbsp;&nbsp;{{likes}}</a>
+                <a href="#" class="flag"><i class="icon ion-flag"></i></a>
             </div>
         </div>
     </article>
