--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </div>
 
             <div class="buttons">
-                <a href="#" class="like"><i class="icon ion-heart"></i>&nbsp;&nbsp;{{likes}}</a>
+                <a href="#" class="like {{#if liked}}selected{{/if}}"><i class="icon ion-heart"></i>&nbsp;&nbsp;{{likes}}</a>
                 <a href="#" class="flag"><i class="icon ion-flag"></i></a>
             </div>
         </div>
