Added flag functionality

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
             <div class="buttons">
                 <a href="#" class="like {{#if liked}}selected{{/if}}"><i class="icon ion-heart"></i>&nbsp;&nbsp;{{likes}}</a>
-                <a href="#" class="flag"><i class="icon ion-flag"></i></a>
+                <a href="#" class="flag {{#if flagged}}selected{{/if}}"><i class="icon ion-flag"></i></a>
             </div>
         </div>
     </article>
