Tags linked with search bar. See DESC
space is the separator between tags. Enter into search bar e.g ‘euro
tour’ hit enter and france and calais will popup because somewhere in
there tags at least one contains either ‘euro’ or ‘tour’

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="title"><i class="icon ion-navicon"></i></div>
         <div class="search">
             <i class="icon ion-search"></i>
-            <input type="text" placeholder="Search">
+            <input type="text" placeholder="Search" id="search">
         </div>
     </header>
     {{>stories}}
