--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,600" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400" rel="stylesheet">
     <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
