--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <img src="{{url}}">
         <div class="options">
             <div class="meta">
-                <p class="location">{{location}}</p>
+                <p class="location">{{location.city}}, {{location.country}}</p>
                 <p class="time">{{time}}</p>
             </div>
 
