Changed textarea to input

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div class="search">
             <i class="icon ion-search"></i>
-            <input type="text" placeholder="Search" value="{{search}}">
+            <input id="search" type="text" placeholder="Search" value="{{search}}">
         </div>
     </header>
 </template>
@@ -33,7 +33,7 @@
         <a href="#" class="icon"><i class="icon ion-close"></i></a>
         <h1>Add story</h1>
         <a href="#" class="image"><i class="icon ion-camera"></i><p>Take picture</p></a>
-        <textarea placeholder="Tags, seperated by spaces" rows="1"></textarea>
+        <input id="tags" type="text" placeholder="Tags, seperated by spaces">
         <a href="#" class="button"><i class="icon ion-upload"></i><p>Upload</p></a>
     </form>
 </template>
