Camera implemented style todo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <form class="{{#if dropdown}}down{{/if}}">
         <a href="#" class="icon"><i class="icon ion-close"></i></a>
         <h1>Add story</h1>
-        <a href="#" class="image"><i class="icon ion-camera"></i><p>Take picture</p></a>
+        <a href="#" class="image" ><img src="{{image}}"><i class="icon ion-camera"></i><p>Take picture</p></a>
         <input id="tags" type="text" placeholder="Tags, seperated by spaces">
         <a href="#" class="button"><i class="icon ion-upload"></i><p>Upload</p></a>
     </form>
