--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <template name="header">
     <header>
         <div class="title">
-            <h1>Rubberneck</h1>
+            <img src="logo.png">
             <div class="icons">
                 <a href="#" class="locate {{#unless local}}disabled{{/unless}}"><i class="icon ion-android-locate"></i></a>
                 <a href="#" class="add"><i class="icon ion-camera"></i></a>
@@ -60,6 +60,7 @@
             </div>
 
             <div class="buttons">
+                <a href="#" class="share"><i class="icon ion-share"></i></a>
                 <a href="#" class="like {{#if liked}}selected{{/if}}"><i class="icon ion-heart"></i>&nbsp;&nbsp;{{likes}}</a>
                 <a href="#" class="flag {{#if flagged}}selected{{/if}}"><i class="icon ion-flag"></i></a>
             </div>
