--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <template name="header">
     <header>
         <div class="title">
-            <img src="logo.png">
+            <img class="logo" src="logo.png">
             <div class="icons">
                 <a href="#" class="locate {{#unless local}}disabled{{/unless}}"><i class="icon ion-android-locate"></i></a>
                 <a href="#" class="add"><i class="icon ion-camera"></i></a>
