Added header that hides and shows

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </body>
 
 <template name="header">
-    <header>
+    <header class="{{#if showTitle}}showTitle{{/if}}">
         <div class="title">
             <img class="logo" src="logo.png">
             <div class="icons">
