Calc points update

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <div class="meta">
                 <p class="location">{{#if location.city}}<a href="#" class="location-tag">{{location.city}}</a>,{{/if}} <a href="#" class="location-tag">{{location.country}}</a></p>
                 <p class="time">{{time}}</p>
+                {{points}}
             </div>
 
             <div class="buttons">
