Hide and show image

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     {{#HammerTouchArea configureCallback=storyConfigure gestureMap=storyGestures}}
     <article id="{{_id}}">
         <img src="{{url}}">
+        <i class="hide-img ion-close-circled"></i>
         <div class="options">
             <div class="meta">
                 <p class="location">{{#if location.city}}<a href="#" class="location-tag">{{location.city}}</a>,{{/if}} <a href="#" class="location-tag">{{location.country}}</a></p>
